--- a/index.css
+++ b/index.css
@@ -38,6 +38,24 @@ body {
   margin: 0;
   padding: 0;
   background: var(--main-navy-blue-110-a-1-d, #110A1D);
+  overflow: hidden;
+}
+
+html, body {
+  scrollbar-color: #478BF9 rgba(255, 255, 255, 0.12);
+  scrollbar-width: 8px;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: var(--transp-white-white-12, rgba(255, 255, 255, 0.12));
+  
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #478BF9;
+  border-radius: 10rem;
 }
 
 ul {
@@ -71,6 +89,7 @@ h1 {
   margin-top: 16px;
   border: 0.25rem solid #478BF9;
   border-radius: 64px;
+  background-color: #110A1D;
 }
 
 .header__menu {
@@ -212,6 +231,8 @@ footer {
   border-radius: 64px 64px 0px 0px;
   border: 4px solid #478BF9;
   bottom: 0;
+  background: var(--main-deep-blue-1-e-1231, #1E1231);
+  z-index: 2;
 }
 
 .social-link {
@@ -231,4 +252,76 @@ footer {
 
 .social-links {
   height: 32px;
+}
+
+.banner {
+  position: absolute;
+  left: 45vw;
+  top: 10vh;
+  z-index: -2;
+  overflow: hidden;
+}
+
+.background {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 1) 100%);
+  z-index: -1;
+}
+
+@keyframes banner-animation-first {
+  0% {
+    top: 0
+  }
+  100% {
+    top: -612px
+  }
+}
+
+@keyframes banner-animation-second {
+  0% {
+    top: -612px
+  }
+  100% {
+    top: 0px
+  }
+}
+
+@keyframes banner-animation-third {
+  0% {
+    top: 0
+  }
+  100% {
+    top: -874px
+  }
+}
+
+.banner {
+  display: flex;
+}
+
+.banner__first-line {
+  position: relative;
+  top: 0;
+  animation: 5s linear 1s infinite normal banner-animation-first;
+}
+
+.banner__third-line {
+  position: relative;
+  top: 0;
+  animation: 5s linear 1s infinite normal banner-animation-third;
+}
+
+.banner__second-line {
+  position: relative;
+  top: -612px;
+  animation: 5s linear 1s infinite normal banner-animation-second;
+}
+
+.banner__image {
+  display: block;
+  margin-bottom: 27px;
 }
